2012-07-10
		* now comments in model and restrictions files are treated like 
		  in normal R (i.e., only everything after # is ignored).
		  Changed: .read.MPT.model() and .read.MPT.restrictions()

2012-07-09
		* added functions gen.predictions and gen.data
		* MPTinR is now byte compiled.
		
2012-05-08
		* resolved bug when obtaining FIA for individual data sets

2012-05-02
		* resolved bug when obtaining FIA from model specified via textConnection.
		
2012-04-26
		* fit.mptinr now checks if there is a gradient/hessian function and 
		  sets use.gradient/use.hessian FALSE otherwise.

2012-04-18
		* copy editing on documentation.
		* select.mpt(): renamed n.model.df to n.independent.categories

2012-04-16
		* more work on bug when paramaters in restrictions are not in model 
		  (work from yesterday introduced more problems)
		  added function .check.restrictions() which also reads the restrictions
		* added an aggregated example to fit.mpt.Rd

2012-04-14
		* data element now contains indidivudal and aggregated data
		* more work on bug when paramaters in restrictions are not in model 

2012-04-13
		* removed warning when cell counts are < 5
		* restrictions.filename can now be a list of characters
		* worked on examples (textConnections moved in the call to fit.mpt)

2012-03-28
		* fixed bug when restricted parameters were not present in the model

2012-03-19
		* model.info does now return the rank of the Fisher Matrix.
		* summary.llks was renamed to fitting.runs

2012-02-25
		* fitting functions(fit.mptinr, fit.mpt, fit.model) contain the option to not
		  fit the aggregated data for multiple datasets.

2012-02-22
		* check.mpt now also displays number of categories and number of df for the model.
		
		* MPTinR-package.Rd updated to current version number and more functions.

2012-02-07
		* select.mpt now rounds information criteria before determining number of 
		 best fits (also added this to select.mpt.Rd)

2012-02-06